--- a/src/index.css
+++ b/src/index.css
@@ -26,9 +26,7 @@
   /* --clr-accent: #c1a9f7; */
   /* --clr-accent: #69d1ee; */
   --clr-accent: #69d1ee;
-  
-
-;
+  --hover-color: #3cb7d8;
 
   --fs-h1: 3rem;
   --fs-h2: 2.25rem;
