adding some design

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,11 @@
 
   --clr-light: #fff;
   --clr-dark: #303030;
-  --clr-accent: #16e0bd;
+  /* --clr-accent: #16e0bd; */
+  --clr-accent: #e4e4e4;
+  
+
+;
 
   --fs-h1: 3rem;
   --fs-h2: 2.25rem;
@@ -56,4 +60,3 @@ h2 {
 h3 {
   font-size: var(--fs-h3);
 }
-
