adding some design

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,14 @@
   --clr-light: #fff;
   --clr-dark: #303030;
   /* --clr-accent: #16e0bd; */
-  --clr-accent: #e4e4e4;
+  /* --clr-accent: #cceab9; */
+  /* --clr-accent: #ade58d; */
+  /* --clr-accent: #f5a6bd; */
+  /* --clr-accent: #d7c9f1; */
+  /* --clr-accent: #ee9783; */
+  /* --clr-accent: #c1a9f7; */
+  /* --clr-accent: #69d1ee; */
+  --clr-accent: #69d1ee;
   
 
 ;
